cards.css
body {
	background-image: url(img/yellowpurple.jpg);
	background-repeat: no-repeat;
	background-size: cover;
	background-position:center;
}

header {
	background-color: purple;
}

.wrapper {
	position: relative;
	cursor: pointer;
	height: 400px;
	width: 300px;
	padding: 12px 0px;
	perspective: 1800px;
	margin: auto;
	transition: ease-in;
}

.card {
	height: 400px;
	width: 300px;
	position: absolute;
	border: 6px solid rgb(112, 20, 127);
	-webkit-transform-style: preserve-3d;
	transform-style: preserve-3d;
	-webkit-transition: -webkit-transform all .8s ease-in-out;
	transition: all 2.2s ease-in-out;
	background-color: rgb(255, 229, 3);
	box-shadow: 0px 6px 10px #4f2c50;
	border-radius: 30px;
}


.card:hover {
	-ms-transform: rotateY(180deg);
	-webkit-transform: rotateY(180deg);
	-moz-transform: rotateY(180deg);
	-o-transform: rotateY(180deg);
	transform: rotateY(180deg);
	/*transition: all 2.2s ease-in-out;*/
	border: 6px solid rgb(255, 229, 3);
}

#front_nine {
	position: absolute;
	height: 298px;
	width: 67%;
	backface-visibility: hidden; 
	-webkit-backface-visibility: hidden;
	-moz-backface-visibility: hidden;
	-ms-backface-visibility: hidden;
	overflow: hidden;
	text-align: right;
	color: #333;
	font-size: 5.3em;
	/*margin:auto;*/
	padding-top: 15%;
	color: rgb(112, 20, 127);
}

#back_nine {
	position: absolute;
	height: 400px;
	width: 300px;
	backface-visibility: hidden; 
	-webkit-backface-visibility: hidden;
	-moz-backface-visibility: hidden;
	-ms-backface-visibility: hidden;
	text-align: center;
	transform: rotateY(180deg);
	color: #ffe503;
	/*margin:auto;*/
	font-size: 1.5em;
	background-color: rgb(112, 20, 127);
	border-radius: 30px;
	display:block;
}

#line {
	width: 104%;
	text-align: right;
}

hr {
	height: 1px;
	border: 3px solid;
	margin: 0em 11px 9px 111px;
	padding: 0;
}


#product {

}

#stars {
	margin: auto;
	position: relative;
	overflow: hidden;
	height: 400px;
	width: 253px;
	text-shadow: 11px 13px 10px #480963;
	-webkit-text-stroke: 2px purple;
}

#zero {
	margin:auto;
	position:relative;
	top: 107px;
	height: 289px;
	width: 200px;
	font-size: 6.3em;
	/*color: rgb(255, 229, 3);*/
}

#zeroo {
	margin:auto;
	position:relative;
	top: 107px;
	height: 289px;
	width: 200px;
	font-size: 6.3em;
	/*color: rgb(255, 229, 3);*/
}

#one {
	margin: auto;
	position: relative;
	top: -22px;
	height: 200px;
	width: 252px;
	font-size: 6.3em;
	/*color: rgb(255, 229, 3);*/
}

#two {
	margin:auto;
	position:relative;
	top: 16px;
	height: 289px;
	width: 200px;
	font-size: 6.3em;
	/*color: rgb(255, 229, 3);*/
}

#three {
	margin: auto;
	position: relative;
	top: 16px;
	height: 200px;
	width: 252px;
	font-size: 6.3em;
	/*color: rgb(255, 229, 3);*/
}

#five {
	margin: auto;
	position: relative;
	top: 16px;
	height: 200px;
	width: 252px;
	font-size: 4.3em;
	/*color: rgb(255, 229, 3);*/
}

#six {
	position: relative;
	top: 16px;
	font-size: 4.3em;
}

#eight {
	position:relative;
	top: 0px;
	font-size: 3.6em;
}

#nine {
	position: relative;
	top: 16px;
	font-size: 4.3em;
}

#ten {
	position:relative;
	top: 0px;
	font-size: 2.6em;
}

/*#eleven {
	margin:auto;
	position:relative;
	top: 25px;
	right: 40px;
	height: 200px;
	width: 340px;
	font-size: .7em;
	color: rgb(255, 229, 3);
	}*/

	nav {
		width:250px;	
		margin: auto;
		padding: 32px;
		/*border-radius:15px;*/
		border-radius: 5px
	}

	button {
		font-size: 1.0em;
		border: none;
		width: 116px;
		height: 48px;
		text-align:center;
		text-decoration:none;
		color: #ecf0f1;
		outline-color: rgb(67, 22, 61);
		box-shadow: 0px 6px 10px #4f2c50;
		background: #7e2972;
		/*padding-left: 10px;*/
		border-radius: 16px
	}

	button:active {
		border: none;
		position:relative;
		top:3px;
		/*box-shadow: 0px 0px #2c3e50;*/
		background: #4c1943;
		color: #7e2972;
		border-radius: 16px
	}

	button:focus {
		/*background-color: #FFC002;*/
		outline:none;
		box-shadow: 0 0 10px black;
		/* outline-color: yellow; */
		/*outline-width: 17px;*/

	}

	button:hover {
		background-color: #ffe503;
		color: #4a1943;
		border-radius: 16px
	}

/*.card:focus {
	outline:none;
	box-shadow: 0 0 10px black;
	}*/

	#prev {
		margin-right: 14px
	}

